--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -10,6 +10,7 @@
         <% @movies.each do |movie|%>
         <div>
             <li>
+                <p><%=movie.id%></p>
                 <p><%=movie.name%></p>
                 <p><%=movie.year%></p>
                 <p><%=movie.description%></p>
