--- a/app/views/admin/movies/adminmovie.html.erb
+++ b/app/views/admin/movies/adminmovie.html.erb
@@ -3,11 +3,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>上映映画一覧</title>
+        <title>上映映画一覧（</title>
         <meta charset="UTF-8">
     </head>
     <body>
-        <% @movies.each do |movie|%>
         <thead>
             <tr>
                 <th>ID</th>
