画像周辺の調整

--- a/app/views/admin/movies/adminmovie.html.erb
+++ b/app/views/admin/movies/adminmovie.html.erb
@@ -27,7 +27,7 @@
                 <th><%=movie.year%></th>
                 <th><%=movie.description%></th>
                 <th>
-                    <a href=<%=movie.image_url%>>画像</a>
+                    <a href="<%=movie.image_url%>">画像</a>
                 </th>
                 <th><%=movie.is_showing ? "上映中" : "上映予定"%></th>
                 <th><%=movie.created_at%></th>
