--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -14,7 +14,7 @@
                 <p><%=movie.name%></p>
                 <p><%=movie.year%></p>
                 <p><%=movie.description%></p>
-                <p><%=movie.image_url%></p>
+                <img src="<%=movie.image_url%>"></p>
                 <p><%=movie.is_showing%></p>
             </li>
         </div>
