名前は一意でなければ

--- a/app/views/admin/movies/adminindex.html.erb
+++ b/app/views/admin/movies/adminindex.html.erb
@@ -1,4 +1,4 @@
-<h1>Admin::Movies#index</h1>
+<h1>Admin::Movies#adminindex</h1>
 <p>Find me in app/views/admin/movies/index.html.erb</p>
 <!DOCTYPE html>
 <html>
