--- a/app/views/admin/movies/new.html.erb
+++ b/app/views/admin/movies/new.html.erb
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <%= form_with model: @Movie do |form| %>
         
     </body>
 </html>
