--- a/app/views/movies/list.html.erb
+++ b/app/views/movies/list.html.erb
@@ -1,5 +1,5 @@
-<h1>Movies#index</h1>
-<p>Find me in app/views/movies/index.html.erb</p>
+<h1>Movies#list</h1>
+<p>Find me in app/views/movies/list.html.erb</p>
 <!DOCTYPE html>
 <html>
     <head>
