--- a/app/views/admin/movies/adminindex.html.erb
+++ b/app/views/admin/movies/adminindex.html.erb
@@ -1,5 +1,5 @@
-<h1>Admin::Movies#adminindex</h1>
-<p>Find me in app/views/admin/movies/adminindex.html.erb</p>
+<h1>Admin::Movies#index</h1>
+<p>Find me in app/views/admin/movies/index.html.erb</p>
 <!DOCTYPE html>
 <html>
     <head>
