--- a/app/views/admin/movies/new.html.erb
+++ b/app/views/admin/movies/new.html.erb
@@ -1,3 +1,5 @@
+<h1>Admin::Movies#new</h1>
+<p>Find me in app/views/admin/movies/new.html.erb</p>
 <h1>新規の映画を追加</h1>
 
 <%= form_with model: @movie do |form| %>
