--- a/app/views/admin/movies/edit.html.erb
+++ b/app/views/admin/movies/edit.html.erb
@@ -1,8 +1,7 @@
-<h1>新規の映画を追加</h1>
+<h1>既存の映画を編集</h1>
 
 <%= form_with model: [ :admin, @movie] do |form| %>
     <div>
-        <%= form.label :id, "ID" %><%= form.number_field :id %><br>
         <%= form.label :name, "タイトル" %><%= form.text_field :name %><br>
         <%= form.label :year, "公開年" %><%= form.text_field :year %><br>
         <%= form.label :description, "概要" %><%= form.text_area :description %><br>
