--- a/app/views/admin/movies/index.html.erb
+++ b/app/views/admin/movies/index.html.erb
@@ -1,9 +1,7 @@
-<h1>Admin::Movies#index</h1>
-<p>Find me in app/views/admin/movies/index.html.erb</p>
 <!DOCTYPE html>
 <html>
     <head>
-        <title>上映映画一覧（</title>
+        <title>上映映画一覧</title>
         <meta charset="UTF-8">
     </head>
     <body>
