--- a/app/views/admin/movies/edit.html.erb
+++ b/app/views/admin/movies/edit.html.erb
@@ -11,4 +11,7 @@
     <div>
         <%= form.submit %>
     </div>
+    <div>
+        <%= button_to "削除", admin_movie_path(@movie), method: :delete, data: { confirm: "本当に削除しますか？" }%>
+    </div>
 <% end %>
