--- a/app/views/admin/movies/index.html.erb
+++ b/app/views/admin/movies/index.html.erb
@@ -20,7 +20,7 @@
         <table>
             <% @movies.each do |movie|%>
             <tr>
-                <th><%=movie.id%></th>
+                <th><a href="/admin/movies/<%=movie.id%>/edit"><%=movie.id%></a></th>
                 <th><%=movie.name%></th>
                 <th><%=movie.year%></th>
                 <th><%=movie.description%></th>
