--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the movies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+table {
+    border-collapse: collapse;
+}
+th,td {
+    border: solid 1px;
+    padding: 5px;
+}
+td {
+    text-align: left;
+}
