--- a/app/views/sheets/sheets.html.erb
+++ b/app/views/sheets/sheets.html.erb
@@ -14,11 +14,18 @@
                     <td>.</td>
                     <td>.</td>
                 </tr>
+                <tr>
+                    <td>:-:</td>
+                    <td>:-:</td>
+                    <td>:-:</td>
+                    <td>:-:</td>
+                    <td>:-:</td>
+                </tr>
                 <% @sheets.each do |sheet|%>
                     <% sheet.row.each do |row|%>
                     <tr>
                         <% sheet.column.each do |column|%>
-                            <td><%=row%>-<%=column%></td>
+                            <td>|<%=row%>-<%=column%>|</td>
                         <% end %>
                     </tr>
                 <% end %>
