カラム表示

--- a/app/views/sheets/sheets.html.erb
+++ b/app/views/sheets/sheets.html.erb
@@ -22,13 +22,9 @@
                     <td>:-:</td>
                 </tr>
                 <% @sheets.each do |sheet|%>
-                    <% sheet.row.each do |row|%>
                     <tr>
-                        <% sheet.column.each do |column|%>
-                            <td>|<%=row%>-<%=column%>|</td>
-                        <% end %>
+                        <td>|<%=sheet.row%>-<%=sheet.column%>|</td>
                     </tr>
-                <% end %>
             <% end %>
             </table>
         </div>
