--- a/app/views/sheets/index.html.erb
+++ b/app/views/sheets/index.html.erb
@@ -6,6 +6,10 @@
     </head>
     <body>
         <div>
+            <title>座席一覧</title>
+        <meta charset="UTF-8">
+        </div>
+        <div>
             <table>
                 <tr>
                     <td>.</td>
