Station09書き終わり

--- a/app/views/admin/schedules/index.html.erb
+++ b/app/views/admin/schedules/index.html.erb
@@ -7,8 +7,9 @@
     <body>
         <h1>上映映画スケジュール一覧</h1>
         <div>
-            <%= button_to "新規", admin_schedule_path(@schedule), method: :new %>
+            <%= button_to "新規", {controller: 'admin/schedules', action: 'new'}, {method: :get} %>
         </div>
+        <br>
         <table>
             <tr>
                 <th>ID</th>
