--- a/app/views/admin/schedules/new.html.erb
+++ b/app/views/admin/schedules/new.html.erb
@@ -1,6 +1,6 @@
 <h1>新規の上映スケジュールを追加</h1>
 
-<%= form_with model: [ :admin, @schedule], scope: :post, url:admin_schedule_path do |form| %>
+<%= form_with model: [ :admin, @schedule] do |form| %>
     <div>
         <%= form.label :movie_id, "映画ID" %><%= form.number_field :movie_id %><br>
         <%= form.label :name, "開始時刻" %><%= form.time_field :name %><br>
